--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,5 +1,90 @@
-div {
-    background: red;
-    height: 1200px;
-    width: 100px;
-} 
+@font-face {
+  font-family: 'iconfont';
+  src: url('//at.alicdn.com/t/font_1444138933_2800848.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1444138933_2800848.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1444138933_2800848.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1444138933_2800848.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1444138933_2800848.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+.iconfont {
+    font-family: 'iconfont';
+    font-style: normal;
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix:before, .clearfix:after {
+  display: table;
+  content: "";
+}
+.btn {
+  font-weight: normal;
+  text-decoration: none;
+  &.btn-xs {
+    font-size: 12px;
+    border-radius: 3px;
+    padding: 3px 6px;
+    font-weight: normal;
+  }
+  &.btn-sm {
+    font-size: 12px;
+    border-radius: 3px;
+    padding: 5px 8px;
+    font-weight: normal;
+  }
+  &.btn-success {
+    color: white;
+    background-color: #5BAC4F;
+  }
+  &.btn-primary {
+    color: white;
+    background-color: #4096fc;
+  }
+}
+body {
+  margin: 0;
+  font-family: 'microsoft yahei';
+  min-width: 1140px;
+}
+.pull-left {
+    float: left!important;
+}
+.pull-right {
+    float: right!important;
+}
+header.nav {
+    height: 55px;
+    background-color: #5086fa;
+    &>div {
+        line-height: 55px;
+        text-align: center;
+    }
+    .left-role, .right-role {
+        img, p, a{
+            float: left;
+            padding: 0 10px;
+            margin: 0;
+            color: white;
+            font-size: 12px;
+            text-decoration: none;
+        }
+        a {
+            padding: 0 10px;
+            margin: 10px 0;
+            line-height: 35px;
+            border-radius: 3px;
+            &.active, &:hover {
+                background-color: #4875E0;
+            }
+        }
+    }
+    .left-role img {
+        margin: 12px 18px;
+    }
+}
+.container {
+    width: 1140px;
+    margin: auto;
+}
+
+@import (less) 'picture-detail';
